add page current character

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -3,5 +3,6 @@
   "United States Dollar": "Dólar",
   "United States dollar": "Dólar",
   "East Caribbean dollar": "Dólar del Caribe Oriental",
-  "unknown": "Desconocido"
+  "unknown": "Desconocido",
+  "Colombian peso": "Peso colombiano"
 }
